# ForWay

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.cfg  thread_output.txt
.github/workflows/: build_wheels.yml
activations/src/: activations_kernel.cpp
activations/tests/: test_activations.py
metrics/src/: dot_kernel.cpp  metrics_kernel.cpp
metrics/tests/: test_dot.py  test_metrics.py
reductions/src/: reductions_kernel.cpp  transpose_kernel.cpp
reductions/tests/: test_reductions.py  test_transpose.py
rng/src/: rng_macro_kernel.f90  rng_micro_kernel.cpp
rng/tests/: test_rng.py
sort/src/: sort_kernel.cpp
sort/tests/: test_sort.py
src/: forway.cpp  macro_kernel.f90  micro_kernel.cpp
test/benchmarks/: benchmark.py
tests/: test_gemm.py
